<resources>
    <string name="app_name">Zeta Inventory Manager</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="query">Query</string>
    <string name="inventory">Inventory</string>
    <string name="outs">Outs</string>
    <string name="add_remove">Add/Remove</string>
    <string name="title_activity_inventory_settings">Inventory_Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_app_settings">appSettings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="settings">Settings</string>
    <string name="sms_permission">SMS Permission</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="item_management">Item Management</string>
    <string name="item_id">Item ID</string>
    <string name="remove_1">Remove 1</string>
    <string name="item_count">Item Count</string>
    <string name="item_name">Item Name</string>
    <string name="upc">UPC</string>
    <string name="add_12">Add 12</string>
    <string name="add_24">Add 24</string>
    <string name="add_1">Add 1</string>
    <string name="custom_amount">Custom Amount</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="add_item_to_database">Add Item to Database</string>
    <string name="item_description">Item Description</string>
    <string name="item_upc">Item UPC</string>
    <string name="name">Name</string>
    <string name="clear">Clear</string>
    <string name="reset_password">Reset Password</string>
</resources>