<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtViewItemMgmt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemInfomation">

    <Button
        android:id="@+id/buttonRemove"
        android:layout_width="89dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/remove_1"
        app:layout_constraintStart_toEndOf="@+id/buttonAdd24"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_management"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="405dp"
        android:layout_height="296dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/item_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="100dp"
        android:text="@string/item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/item_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/upc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/buttonAdd12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/add_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/buttonAdd24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/add_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd12" />

    <Button
        android:id="@+id/buttonAdd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/add_1"
        app:layout_constraintStart_toEndOf="@+id/buttonAdd12"
        tools:layout_editor_absoluteY="408dp" />

    <TextView
        android:id="@+id/textViewCustom"
        android:layout_width="162dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="108dp"
        android:text="@string/custom_amount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="235dp"
        android:layout_height="30dp"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCustom" />

    <Button
        android:id="@+id/buttonCustomAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCustomRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="8dp"
        android:text="@string/remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCustomAdd" />
</androidx.constraintlayout.widget.ConstraintLayout>